--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>InfoTEA</title>
-  <!-- Bootstrap 4.6 -->
+
+  <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.6.0/css/bootstrap.min.css">
+
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -25,11 +30,25 @@
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
     footer {
-      background: #007BFF;
+      background: linear-gradient(90deg, #007BFF, #FFD700, #FF4500, #32CD32);
       color: white;
       text-align: center;
       padding: 15px;
       margin-top: 30px;
+    }
+    footer a {
+      color: #fff;
+      background: rgba(0,0,0,0.2);
+      padding: 6px 12px;
+      border-radius: 10px;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      transition: background 0.3s;
+    }
+    footer a:hover {
+      background: rgba(0,0,0,0.35);
     }
   </style>
 </head>
@@ -37,8 +56,9 @@
 
   <!-- Cabeçalho -->
   <header style="position:relative; min-height:320px; display:flex; align-items:center; justify-content:center; text-align:center; color:#fff;">
-    <img src="img.tea/foto tea.png" alt="Banner" 
-         style="position:absolute; inset:0; width:100%; height:100%; object-fit:cover;">
+    <img src="img/foto-tea.png" alt="Banner" 
+     style="position:absolute; inset:0; width:100%; height:100%; object-fit:cover;">
+
     <div style="position:relative; z-index:1; text-shadow:1px 1px 4px rgba(0,0,0,.7);">
       <h1>Inclusão e Informação</h1>
       <p>Interface Acessível para pessoas com TEA</p>
@@ -79,36 +99,17 @@
     </div>
   </section>
 
-  <!-- Contato -->
-  <section class="container my-5">
-    <h2 class="section-title">Entre em Contato</h2>
-    <form action="https://formsubmit.co/fernandesescorcio4@gmail.com" method="POST">
-      <!-- Anti-spam -->
-      <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="obrigado.html">
-
-      <div class="form-group">
-        <label for="nome">Nome</label>
-        <input type="text" name="nome" class="form-control" id="nome" placeholder="Seu nome" required>
-      </div>
-      <div class="form-group">
-        <label for="email">E-mail</label>
-        <input type="email" name="email" class="form-control" id="email" placeholder="Seu e-mail" required>
-      </div>
-      <div class="form-group">
-        <label for="mensagem">Mensagem</label>
-        <textarea name="mensagem" class="form-control" id="mensagem" rows="3" placeholder="Digite sua mensagem ou pergunta" required></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Enviar</button>
-    </form>
-  </section>
-
   <!-- Rodapé -->
   <footer>
-    <p>© 2025 - Projeto Web Inclusivo | Desenvolvido por Vitoria Escorcio</p>
+    <p>© 2025 - Projeto Web Inclusivo | Desenvolvido por <b>Vitoria Escorcio</b></p>
+    <p>
+      <a href="contato.html">
+        <i class="bi bi-person-rolodex"></i> Entre em Contato
+      </a>
+    </p>
   </footer>
 
-  <!-- Bootstrap JS -->
+  <!-- Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
