--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <!-- Sobre -->
   <section class="container my-5">
     <h2 class="section-title">Sobre o Projeto</h2>
-    <img src="img.tea/foto-tea.png" alt="Autismo Inclusão" width="250" class="mb-3">
+     <img src="foto-tea.png/" alt="Autismo Inclusão" width="250" class="mb-3">
     <p>
       Este projeto nasceu da necessidade de criar um espaço digital confiável e acessível para pessoas com Transtorno do Espectro Autista (TEA), seus familiares e responsáveis. Muitas vezes, a informação disponível sobre o autismo é dispersa, pouco clara ou de difícil compreensão, o que dificulta o acesso a direitos, serviços especializados e orientações seguras.
       Nosso objetivo é oferecer um site informativo, com design inclusivo e intuitivo, que permita uma navegação simples, cores de referência ao autismo e conteúdo organizado de forma clara. Assim, buscamos promover a inclusão, a conscientização e o apoio às pessoas autistas e à rede que as acompanha.
@@ -115,4 +115,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
